# tle-fetcher

./: .gitignore  README.md  ids.txt  maturin.toml  pyproject.toml  requirements-dev.txt  requirements.txt  speckit.tasks  tle_fetcher.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs-lint.yml  fetch-tles.yml  lint.yml  nightly-smoke.yml  pages.yml  release.yml  web.yml
core-rs/tle_core/: Cargo.toml
core-rs/tle_core/src/: lib.rs
data/cache/: 25544.tle  43013.tle  smoke_ids.txt
db/: __init__.py  crud.py  models.py  session.py
db/migrations/: 0001_initial.sql
docs/: ARCHITECTURE.md  CONNECTORS.md  CONTRIBUTING.md  OPERATIONS.md  RELEASE_NOTES.md  SECURITY.md  index.html  spec.md
docs/specs/: offline_first_system.md
fetch/: cache.py  service.py  sources.py
ingest/: __init__.py  catalog_sources.py  pipeline.py
mermaid/: architecture-overview.mmd  deployment-flow.mmd
propagate/: __init__.py  frames.py  service.py
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
tests/: test_cli.py  test_cli_bootstrap.py  test_import.py  test_logging.py
tests/cli/: test_db_cli.py  test_fetch_cli.py
tests/connectors/: test_notion_flag.py
tests/core/: test_epoch.py  test_parse.py
tests/db/: test_crud.py  test_schema.py
tests/fetch/: test_cache.py  test_service.py
tests/ingest/: test_catalog_sources.py  test_pipeline.py
tests/propagate/: golden_cases.json  test_golden_cases.py
tle_fetcher/: __init__.py  __main__.py  cli.py  config.py  core.py  fetcher.py  logging.py  tle.py
tle_fetcher/cli/: __init__.py  common.py  db.py  discover.py  fetch.py  legacy.py  propagate.py  report.py
tle_fetcher/connectors/: __init__.py  notion_sync.py
tle_fetcher/core/: __init__.py  _rust.py  _rust.pyi  python_impl.py  types.py
tles/: 25544.tle  43013.tle
web/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/components/: Gauges.tsx  (+3 more)
(+36 files in other folders)
