[package]
name = "tle_core"
version = "0.1.0"
edition = "2021"
description = "PyO3 bindings for tle_fetcher core functions"

[lib]
name = "_tle_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
